enabled index to pull blog content from db

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-  
+    
+
     <h1>Build a Blog</h1>
     <article>
-        <h2>Blog Title</h2>
-        <p>Blog Content</p>
+        {% for blog in blogs: %}
+            <h2>{{blog.title}}</h2>
+            <p>{{blog.body}}</p>
+        {% endfor %}
+        
     </article>
 {% endblock %}
