added error message handling

--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,14 +2,16 @@
 
 {% block content %}
     <h1>Add a Blog Entry</h1>
-    <form action="/add" method="post">
+    <form action="/blog" method="post">
         <label for="blog_title">
             Title for your new blog:
-            <input type="text" name="blog_title"/>    
+            <input type="text" name="blog_title" value="{{blog_title}}"/>
+            <span class="error">{{blog_title_error}}</span>    
         </label>
         <label for="blog_content">
             Your new blog:
-            <textarea name="blog_content"></textarea>  
+            <textarea name="blog_content">{{blog_content}}</textarea> 
+            <span class="error">{{blog_content_error}}</span> 
         </label>
         <input type="submit" value="Add Entry"/>
     </form>
