--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<article>
-    {% for blog in blogs: %}
-    <h1>{{blog.title}}</h1>
-        <p>{{blog.body}}</p>
-    {% endfor %}
-</article>
+    <h1>{{title}}</h1>
+        <article>
+        <p>{{body}}</p>
+        </article>
 {% endblock %}
