added login and sign up page logic

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,15 @@
             <li><a href="/newpost">Add a Blog Entry</a></li>
         </ul>
     </nav>
-    
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul class=flashes>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %}
     {% endblock %}
 
