--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
         <tr>
             <td><label for="username">Username</label></td>
             <td>
-                <input name="username" type="text" value="{{ username }}">
+                <input name="username" type="text">
             </td>
         </tr>
         <tr>
@@ -20,4 +20,5 @@
     </table>
     <input type="submit" value="Login">
 </form>
+<p>Don't have an account? <a href="/signup">Create one!</a></p>
 {% endblock %}
