--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,27 +1,30 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="/register" method="post">
+<form action="/signup" method="post">
     <table>
         <tr>
             <td><label for="username">Username</label></td>
             <td>
                 <input name="username" type="text" value="{{ username }}">
+                <span class="error">{{username_error}}</span>
             </td>
         </tr>
         <tr>
             <td><label for="password">Password</label></td>
             <td>
                 <input name="password" type="password">
+                <span class="error">{{password_error}}</span>
             </td>
         </tr>
         <tr>
             <td><label for="verify">Verify Password</label></td>
             <td>
                 <input name="verify" type="password">
+                <span class="error">{{verify_error}}</span>
             </td>
         </tr>
     </table>
-    <input type="submit" value="Register">
+    <input type="submit" value="Sign Up">
 </form>
 {% endblock %}
