--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <h1>Users</h1>
         {% for user in users: %}
         <ul class='users'>
-            <li>{{user.username}}</li>
+            <li><a href="./blog?user={{user.username}}">{{user.username}}</a></li>
         </ul>
         {% endfor %}
 {% endblock %}
