added links to user pages

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,8 +1,9 @@
-ß{% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
     <article>
         <h1>{{title}}</h1>
         <p>{{body}}</p>
+        <p>Written by <a href="./blog?user={{author}}">{{author}}</a> on {{pub_date}}</p>
     </article>
 {% endblock %}
