--- a/templates/listblogs.html
+++ b/templates/listblogs.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     
-    <h1>Build a Blog</h1>
+    <h1>Blogz</h1>
         {% for blog in blogs: %}
         <article>
             <h2><a href="./blog?id={{blog.id}}">{{blog.title}}</a></h2>
