added blog pagination

--- a/templates/listblogs.html
+++ b/templates/listblogs.html
@@ -10,4 +10,12 @@
             <p>Written by <a href="./blog?user={{blog.username}}">{{blog.username}}</a> on {{blog.pub_date}}</p>
         </article>
         {% endfor %}
+
+        {% if prev_url %}
+        <a href="{{ prev_url }}">Newer posts</a>
+        {% endif %}
+        {% if next_url %}
+        <a href="{{ next_url }}">Older posts</a>
+        {% endif %}
+
 {% endblock %}
