--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,6 +4,6 @@
     <article>
         <h1>{{title}}</h1>
         <p>{{body}}</p>
-        <p>Written by <a href="./blog?user={{author}}">{{author}}</a> on {{pub_date}}</p>
+        <p><em>Written by <a class="author" href="./blog?user={{author}}">{{author}}</a> on {{pub_date}}</em></p>
     </article>
 {% endblock %}
