--- a/templates/listblogs.html
+++ b/templates/listblogs.html
@@ -7,15 +7,15 @@
         <article>
             <h2><a href="./blog?id={{blog.id}}">{{blog.title}}</a></h2>
             <p>{{blog.body}}</p>
-            <p>Written by <a href="./blog?user={{blog.username}}">{{blog.username}}</a> on {{blog.pub_date}}</p>
+            <p><em>Written by <a class="author" href="./blog?user={{blog.username}}">{{blog.username}}</a> on {{blog.pub_date}}</em></p>
         </article>
         {% endfor %}
 
         {% if prev_url %}
-        <a href="{{ prev_url }}">Newer posts</a>
+        <a class="newer" href="{{ prev_url }}">Newer posts</a>
         {% endif %}
         {% if next_url %}
-        <a href="{{ next_url }}">Older posts</a>
+        <a class="older" href="{{ next_url }}">Older posts</a>
         {% endif %}
 
 {% endblock %}
