--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-<!-- <h1>Log in to Get It Done!</h1>
-<p>If you don't have an account, you may <a href="/register">register</a> for one</p> -->
-<form action="/login" method="post">
-    <table>
-        <tr>
-            <td><label for="username">Username</label></td>
-            <td>
-                <input name="username" type="text">
-            </td>
-        </tr>
-        <tr>
-            <td><label for="password">Password</label></td>
-            <td>
-                <input name="password" type="password">
-            </td>
-        </tr>
-    </table>
-    <input type="submit" value="Login">
-</form>
-<p>Don't have an account? <a href="/signup">Create one!</a></p>
-{% endblock %}
+<h1>Login</h1>
+<div class="login">
+    <form action="/login" method="post">
+        <table>
+            <tr>
+                <td><label for="username">Username</label></td>
+                <td>
+                    <input name="username" type="text" value="{{ username }}">
+                    <span class="error">{{username_error}}</span>
+                </td>
+            </tr>
+            <tr>
+                <td><label for="password">Password</label></td>
+                <td>
+                    <input name="password" type="password">
+                    <span class="error">{{password_error}}</span>
+                </td>
+            </tr>
+        </table>
+        <input type="submit" value="Login">
+    </form>
+    <p>Don't have an account? <a href="/signup"><strong>Create one!</strong></a></p>
+    {% endblock %}
+</div>
