--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>Sign Up</h1>
 <form action="/signup" method="post">
     <table>
         <tr>
