--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
-    <nav>
-        <ul class="navbar">
-            <li class='menu'><a href="/">Home</a></li>
-            <li class='menu'><a href="/blog">All Blogs</a></li>
-            <li class='menu'><a href="/newpost">Add a Blog Entry</a></li>
-        <ul class="navbar-right">
-            {% with user = session['username'] %}
-            {% if user != Null %}
-            <li class="menu"><a href="./blog?user={{user}}">{{ user }}</a></li>
-            <li class="menu"><a href="/logout">Logout</a></li>
-            {% else %}
-            <li class="menu"><a href="/login">Login</a></li>
-            {% endif %}
-            {% endwith %}
-
-
-        </ul>
-    </nav>
+    <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                        
+                    </button>
+                    <a class="navbar-brand">Blogz</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog">All Blogs</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/newpost">Add a Blog Entry</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% with user = session['username'] %}
+                        {% if user != Null %}
+                        <li class="nav-item"><a class="nav-link" href="./blog?user={{user}}">{{ user }}</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                        {% else %}
+                        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+                        {% endif %}
+                        {% endwith %}
+                    </ul>
+                </div>  
+            </div>
+        </nav>
     <main>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
