--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-    
-            <h1>Users</h1>
-            <div class="user_list">
-                <ul class='users'>
-                    {% for user in users: %}
-                        <li class="indiv_user"><a href="./blog?user={{user.username}}">{{user.username}}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
+    <div class="container"> 
+        <h1>Users</h1>
+        <ul class='list-group'>
+            {% for user in users: %}
+                <li class="list-group-item"><a href="./blog?user={{user.username}}">{{user.username}}</a></li>
+            {% endfor %}
+        </ul>
             
-        <div class="nextprev">
+        <ul class="breadcrumb">
             {% if prev_url %}
-            <a class="previous" href="{{ prev_url }}">Previous user page</a>
+            <li><a href="{{ prev_url }}">Previous user page</a></li> 
             {% endif %}
             {% if next_url %}
-            <a class="next" href="{{ next_url }}">Next user page</a>
+            <li><a href="{{ next_url }}">Next user page</a></li>
             {% endif %}
-        </div>
+        </ul>
+    </div>
         
 
 {% endblock %}
