--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -1,18 +1,49 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% if blog_title_error%}
+    <div class="container">
+        <div class="alert alert-danger alert-dismissible fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            {{blog_title_error}}
+        </div>    
+    </div>
+{% endif %}
+
+{% if blog_title_error%}
+    <div class="container">
+
+        <div class="alert alert-danger alert-dismissible fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            {{blog_content_error}}
+        </div>    
+    </div>
+{% endif %}
+
+
+<div class="container">   
     <h1>Add a Blog Entry</h1>
-    <form action="/blog" method="post">
-        <label for="blog_title">
-            Title for your new blog:
-            <input type="text" name="blog_title" value="{{blog_title}}"/>
-            <span class="error">{{blog_title_error}}</span>    
-        </label>
-        <label for="blog_content">
-            Your new blog:
-            <textarea name="blog_content">{{blog_content}}</textarea> 
-            <span class="error">{{blog_content_error}}</span> 
-        </label>
+</div>
+
+
+<div class="container">
+    <form action="/newpost" method="post">
+        <div class="form-group">
+            <label for="blog_title">
+                Title for your new blog:
+                <input type="text" name="blog_title" value="{{blog_title}}"/>
+
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label for="blog_content"> Your new blog:</label>
+            <textarea class="form-control" name="blog_content">{{blog_content}}</textarea> 
+        </div>
+        
         <input type="submit" value="Add Entry"/>
+
     </form>
+</div>
+   
 {% endblock %}
