--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,31 +1,58 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Sign Up</h1>
-<form action="/signup" method="post">
-    <table>
-        <tr>
-            <td><label for="username">Username</label></td>
-            <td>
-                <input name="username" type="text" value="{{ username }}">
-                <span class="error">{{username_error}}</span>
-            </td>
-        </tr>
-        <tr>
-            <td><label for="password">Password</label></td>
-            <td>
-                <input name="password" type="password">
-                <span class="error">{{password_error}}</span>
-            </td>
-        </tr>
-        <tr>
-            <td><label for="verify">Verify Password</label></td>
-            <td>
-                <input name="verify" type="password">
-                <span class="error">{{verify_error}}</span>
-            </td>
-        </tr>
-    </table>
-    <input type="submit" value="Sign Up">
-</form>
+
+{% if username_error%}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        {{username_error}}
+    </div>    
+</div>
+{% endif %}
+
+{% if password_error%}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        {{password_error}}
+    </div>    
+</div>
+{% endif %}
+
+{% if verify_error%}
+<div class="container">
+    <div class="alert alert-danger alert-dismissible fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        {{verify_error}}
+    </div>    
+</div>
+{% endif %}
+
+
+<div class="container"> 
+    <h1>Sign Up</h1>
+</div>
+
+<div class="container">   
+    <form action="/signup" method="post">
+        <div class="form-group">
+            <label for="username">Username</label></td>
+            <input name="username" type="text" value="{{ username }}">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input name="password" type="password">
+        </div>
+
+        <div class="form-group">
+            <label for="verify">Verify Password</label>
+            <input name="verify" type="password">
+        </div>
+
+        <input type="submit" value="Sign Up">
+    </form>
+</div>
+
 {% endblock %}
