--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Add a Blog Entry</h1>
-    <form action="/blog" method="post">
+    <form action="/newpost" method="post">
         <label for="blog_title">
             Title for your new blog:
             <input type="text" name="blog_title" value="{{blog_title}}"/>
